cargo_tests/pinvoke_sqlite/src/native.rs

// @generated by `cargo dotnet bindgen`; edit the header or command, not this file.
#![allow(dead_code, non_camel_case_types, non_snake_case, non_upper_case_globals)]

/* automatically generated by rust-bindgen 0.72.1 */

pub type sqlite3_callback = ::std::option::Option<
    unsafe extern "C" fn(
        context: *mut ::std::os::raw::c_void,
        columns: ::std::os::raw::c_int,
        values: *mut *mut ::std::os::raw::c_char,
        names: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3 {
    _unused: [u8; 0],
}
#[link(name = "e_sqlite3")]
unsafe extern "C" {
    pub fn sqlite3_open(
        filename: *const ::std::os::raw::c_char,
        database: *mut *mut sqlite3,
    ) -> ::std::os::raw::c_int;
    pub fn sqlite3_close(database: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_exec(
        database: *mut sqlite3,
        sql: *const ::std::os::raw::c_char,
        callback: sqlite3_callback,
        context: *mut ::std::os::raw::c_void,
        error_message: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
    pub fn sqlite3_errmsg(database: *mut sqlite3) -> *const ::std::os::raw::c_char;
    pub fn sqlite3_free(pointer: *mut ::std::os::raw::c_void);
    pub fn sqlite3_libversion_number() -> ::std::os::raw::c_int;
}
